# smscli

./: Cargo.toml  README.md  build.rs  config.yml
.github/workflows/: release.yml
src/: config.rs  main.rs  smppclient.rs
