[package]
name = "smscli"
version = "1.0.0"
edition = "2021"
description = "A command-line tool for sending SMS messages via an SMSC (Short Message Service Center)."
authors = ["Sebastian Żerdzicki"]

[dependencies]
clap = { version = "4.5.31", features = ["cargo", "derive"] }
dirs = "6.0.0"
futures = "0.3.31"
rusmpp = { version = "0.1.3", features = ["full", "pretty-hex-fmt"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
yapp = "0.5.0"

